# actions-test

./: .coveragerc  .flake8  .pre-commit-config.yaml  LICENSE  pyproject.toml  pytest.ini
.github/workflows/: python.yaml
tests/: test_app.py
