[tool.poetry]
name = "action-test"
version = "0.1.0"
description = ""
authors = ["Daryll Strauss <daryll.strauss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
codespell = "^2.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
WebTest = "^3.0.0"
psycopg = {extras = ["binary"], version = "^3.0.11"}
bandit = "^1.7.4"
pytest-postgresql = "^4.1.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
